ui/qt/iax2_analysis_dialog.cpp
@@ -214,6 +214,8 @@ Iax2AnalysisDialog::Iax2AnalysisDialog(QWidget &parent, CaptureFile &cf) :
     stream_ctx_menu_.addAction(ui->actionSaveReverseCsv);
     stream_ctx_menu_.addSeparator();
     stream_ctx_menu_.addAction(ui->actionSaveGraph);
+    set_action_shortcuts_visible_in_context_menu(stream_ctx_menu_.actions());
+
     ui->forwardTreeWidget->installEventFilter(this);
     ui->forwardTreeWidget->setContextMenuPolicy(Qt::CustomContextMenu);
     connect(ui->forwardTreeWidget, SIGNAL(customContextMenuRequested(QPoint)),
