ui/qt/lte_rlc_graph_dialog.cpp
@@ -93,6 +93,7 @@ LteRlcGraphDialog::LteRlcGraphDialog(QWidget &parent, CaptureFile &cf, bool chan
     ctx_menu_->addAction(ui->actionCrosshairs);
     ctx_menu_->addSeparator();
     ctx_menu_->addAction(ui->actionSwitchDirection);
+    set_action_shortcuts_visible_in_context_menu(ctx_menu_->actions());
 
     // Zero out this struct.
     memset(&graph_, 0, sizeof(graph_));
